@@ -1,5 +1,6 @@
 www-alpha-007
 * Homepage polished.
+* Got rid of account activity.
 
 www-alpha-006
 * UI improvements.
